[package]
name = "viewers"
version = "0.1.0"
authors = ["Vasily Chernov <kapot65@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = "0.27.2"
egui_plot = "0.27.2"
egui_extras = { version =  "0.27.2", features = ["image", "svg"]}
eframe = { version = "0.27.2" }

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.91"
serde_qs = "0.13.0"
rmp-serde = "1.1.1"

tracing = "0.1.37"

processing = { git = "https://bitbucket.org/Kapot/numass-processing.git", tag = "0.1.3", features = ["egui"] }

protobuf = "3.2.0"

chrono = "0.4.23"
natord = "1.0.9"
globset = "0.4.11"
tikv-jemallocator = "0.5.4"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

tokio = { version = "1.21.2", features = ["full"] }
dataforge = { git = "https://bitbucket.org/Kapot/dataforge-parser-rust.git", tag = "0.1.3", features = ["tokio"]  }

rfd = "0.14.1"
home = "0.5.4"
which = "6.0.1"

clap = { version = "4.1.4", features = ["derive"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2"
console_error_panic_hook = "0.1.6"

dataforge = { git = "https://bitbucket.org/Kapot/dataforge-parser-rust.git", tag = "0.1.3"  }

wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4"

js-sys = "0.3.52"
gloo = { version = "0.11.0", features = ["net", "console", "utils", "worker", "futures"] }

[patch."https://bitbucket.org/Kapot/dataforge-parser-rust.git"]
dataforge = { path = "../dataforge-parser-rust" }

[patch."https://bitbucket.org/Kapot/numass-processing.git"]
processing = { path = "../numass-processing" }
